[package]
name = "losses"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.24", features = ["serde"] }
clap = { version = "4.2.7", features = ["derive"] }
csv = "1.2.1"
derivative = "2.2.0"
dirs = "5.0.1"
rand = "0.8.5"
serde = { version = "1.0.163", features = ["derive"] }

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "summarize"
harness = false
